--- a/books/books.html
+++ b/books/books.html
@@ -61,7 +61,7 @@
                 <h2>Free the Darkness</h2><!-- Book Title -->
                 <h3>King's Dark Tidings Book 1</h3><!-- Book Series Name -->
                 <h4>By: Kel Kade</h4><!-- Author's Name -->
-                <button><a href="https://www.amazon.com/gp/product/B019YM2E62?ref_=dbs_m_mng_rwt_calw_tkin_0&storeType=ebooks" target="_blank" rel="noopener noreferrer">Amazon Link</a></button><!-- Product Link -->
+                <button><a href="https://amzn.to/3InArVW" target="_blank" rel="noopener noreferrer">Amazon Link</a></button><!-- Product Link -->
                 <p><!-- Book Description -->
                     A #1 Best Seller in Amazon's Epic Fantasy!<br><br>
 
@@ -91,7 +91,7 @@
                 <h2>The Name of the Wind</h2><!-- Book Title -->
                 <h3>The Kingkiller Chronicle Book 1</h3><!-- Book Series Name -->
                 <h4>By: Patrick Rothfuss</h4><!-- Author's Name -->
-                <button><a href="https://www.amazon.com/Name-Wind-Kingkiller-Chronicle-Book-ebook/dp/B0010SKUYM/ref=sxts_entity_rec_bsx_s_def_r00_t_aufl?crid=PYV4GRQFRKMP&cv_ct_cx=patrick+rothfuss&keywords=patrick+rothfuss&pd_rd_i=B0010SKUYM&pd_rd_r=083fcdba-9330-4fb1-b1e0-a635374103e5&pd_rd_w=iLCTD&pd_rd_wg=qmybK&pf_rd_p=7b65f550-ae72-40a7-86e4-c165711b4536&pf_rd_r=94VXT2W07AWBQARY7S8D&qid=1653153305&s=digital-text&sprefix=PATRIC%2Cdigital-text%2C148&sr=1-1-ef9bfdb7-b507-43a0-b887-27e2a8414df0" target="_blank" rel="noopener noreferrer">Amazon Link</a></button><!-- Product Link -->
+                <button><a href="https://amzn.to/3YOdlNF">Amazon Link</a></button><!-- Product Link -->
                 <p><!-- Book Description -->
                     <b>Discover #1 New York Times-bestselling Patrick Rothfuss’ epic fantasy series, The Kingkiller Chronicle.</b><br><br>
  
@@ -139,7 +139,7 @@
                 <h2>The Land: Founding: A LitRPG Saga</h2><!-- Book Title -->
                 <h3>Chaos Seeds Book 1</h3><!-- Book Series Name -->
                 <h4>Aleron Kong</h4><!-- Author's Name -->
-                <button><a href="https://www.amazon.com/Land-Founding-LitRPG-Chaos-Seeds-ebook/dp/B0172GEB68/ref=sr_1_3?crid=19JQW1ZKZB58S&keywords=the+land&qid=1653156228&s=digital-text&sprefix=the+land%2Cdigital-text%2C139&sr=1-3" target="_blank" rel="noopener noreferrer">Amazon Link</a></button><!-- Product Link Change href -->
+                <button><a href="https://amzn.to/3YvngIi" target="_blank" rel="noopener noreferrer">Amazon Link</a></button><!-- Product Link Change href -->
                 <p><!-- Book Description -->
                     From the mind of the <b>WallStreet Journal</b> Best Selling Author, Aleron Kong, comes the <b>InternationallyAcclaimed</b> Debut Novel of the Acclaimed Chaos SeedsSaga<br><br> 
 
